# C2S_Sync

./: README.md  pyproject.toml
client/: client.py  data.txt  data_backup.txt
client (копия)/: client.py  data.txt  data_backup.txt
server/: Dockerfile  data.txt  docker-compose.yml  server.py
server/database/: Dockerfile  text_syncro.sql
