[tool.poetry]
name = "c2s_sync"
version = "0.1.0"
description = ""
authors = ["Andrey Goryachev <raikslerx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyinotify = "^0.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
